# ai-coder-assistant

./: .ai_coder_ignore  .flake8  .gitignore  .isort.cfg  =3.0.2  =3.1.0  APP_PLAN_AND_COMPARISON.md  ARCHITECTURE.md  BUILD_PLAN.md  CHANGELOG.md  Dockerfile  Dockerfile.remediation  FEATURE_SUMMARY.md  FINAL_FIXES_SUMMARY.md  FIXES_SUMMARY.md  ISSUES_AND_FIXES.md  LICENSE_CHANGE_SUMMARY.md  Modelfile  Own_trained_model_ai_code_review_report.html  PERFORMANCE_IMPROVEMENTS.md  PR_CREATION_FEATURE.md  README.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  WEB_SCRAPING_FIXES.md  acquire_docs.py  ai_code_review_report.txt  ai_coder_scanner.py  ai_tab_widgets.py  ai_tools.py  browser_tab.py  build_all.py  build_linux.sh  build_macos.sh  build_windows.bat  code_standards_config.json  config.py  data_acquisition.py  data_tab_widgets.py  docker-compose.yml  (+18 more)
.github/workflows/: ci.yml  python-app.yml  security-scan.yml
.taskmaster/: config.json
.taskmaster/docs/: prd.txt
api/: Dockerfile  README.md  main.py  requirements.txt
config/: app_config.json  llm_studio_config.json  pr_automation_config.json  security_config.json  security_intelligence_config.json
docs/: API_MIGRATION_GUIDE.md  ARCHITECTURE.md  AUTOMATE_MODE_INTEGRATION.md  AUTONOMOUS_WORKFLOW_IMPLEMENTATION.md  AUTONOMOUS_WORKFLOW_QUICK_START.md  BUILD_README.md  CODE_QUALITY_IMPROVEMENTS.md  COLLABORATION_TAB_IMPROVEMENTS.md  DOCKER_TESTING_IMPLEMENTATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENTERPRISE_SECURITY_SCANNING.md  EXECUTIVE_SUMMARY_IMPROVEMENTS.md  IMPORT_BEST_PRACTICES.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  LM_STUDIO_INTEGRATION.md  MODEL_MANAGER_ENHANCEMENTS.md  SECURITY.md  SECURITY_API.md  SPECIALIZED_CODE_REVIEWER_GUIDE.md  UNIFIED_API_IMPLEMENTATION.md  WEB_SCRAPING_TIMEOUT_BUG_FIX.md  advanced_analytics_guide.md  advanced_refactoring_guide.md  ai_analysis_refactoring_session.md  autonomous_refactoring_guide.md  cloud_model_integration_guide.md  cloud_models_section.md  code_standards_guide.md  collaboration_guide.md  continuous_learning_guide.md  installation_guide.md  multi_language_support.md  ollama_remote_guide.md  performance_optimization_guide.md  pr_automation_guide.md  provider_system_guide.md  pyqt6_best_practices_analysis.md  security_intelligence_guide.md  setup_and_configuration_guide.md  (+7 more)
docs/chat_logs/: step5_implementation_session.md
documentation_corpus/joblib/: en_latest_auto_examples_index.txt  en_latest_auto_examples_serialization_and_wrappers.txt  en_latest_custom_parallel_backend.txt  en_latest_developing.txt  en_latest_generated_joblib_Memory.txt  en_latest_generated_joblib_Parallel.txt  en_latest_generated_joblib_cpu_count.txt  en_latest_generated_joblib_dump.txt  en_latest_generated_joblib_hash.txt  en_latest_generated_joblib_load.txt  en_latest_generated_joblib_parallel_backend.txt  en_latest_generated_joblib_parallel_config.txt  en_latest_generated_joblib_register_compressor.txt  en_latest_index.txt  en_latest_installing.txt  en_latest_memory.txt  en_latest_parallel.txt  en_latest_persistence.txt  en_latest_why.txt
documentation_corpus/numpy/: doc_stable.txt  doc_stable_building_blas_lapack.txt  doc_stable_building_compilers_and_options.txt  doc_stable_building_cross_compilation.txt  doc_stable_building_distutils_equivalents.txt  doc_stable_building_index.txt  doc_stable_building_introspecting_a_build.txt  doc_stable_building_redistributable_binaries.txt  doc_stable_building_understanding_meson.txt  doc_stable_dev_development_environment.txt  doc_stable_dev_index.txt  doc_stable_dev_underthehood.txt  doc_stable_f2py_index.txt  doc_stable_glossary.txt  doc_stable_license.txt  doc_stable_numpy_2_0_migration_guide.txt  doc_stable_reference_array_api.txt  doc_stable_reference_arrays.txt  doc_stable_reference_arrays_classes.txt  doc_stable_reference_arrays_datetime.txt  doc_stable_reference_arrays_dtypes.txt  doc_stable_reference_arrays_interface.txt  doc_stable_reference_arrays_ndarray.txt  doc_stable_reference_arrays_nditer.txt  doc_stable_reference_arrays_promotion.txt  doc_stable_reference_arrays_scalars.txt  doc_stable_reference_c-api_array.txt  doc_stable_reference_c-api_config.txt  doc_stable_reference_c-api_coremath.txt  doc_stable_reference_c-api_data_memory.txt  doc_stable_reference_c-api_datetimes.txt  doc_stable_reference_c-api_deprecations.txt  doc_stable_reference_c-api_dtype.txt  doc_stable_reference_c-api_generalized-ufuncs.txt  (+65 more)
ide/emacs/: ai-coder.el
learning_data/: learning_data.jsonl
processed_docs_chunks/: vocabulary.json
python_stdlib_docs/: 3_library_allos.txt  3_library_archiving.txt  3_library_argparse.txt  3_library_array.txt  3_library_binary.txt  3_library_bisect.txt  3_library_bz2.txt  3_library_calendar.txt  3_library_cmath.txt  3_library_cmdlinelibs.txt  3_library_codecs.txt  3_library_collections.abc.txt  3_library_collections.txt  3_library_configparser.txt  3_library_constants.txt  3_library_copy.txt  3_library_copyreg.txt  3_library_crypto.txt  3_library_csv.txt  3_library_ctypes.txt  3_library_datatypes.txt  3_library_datetime.txt  3_library_dbm.txt  3_library_decimal.txt  3_library_difflib.txt  3_library_enum.txt  3_library_errno.txt  3_library_exceptions.txt  3_library_filecmp.txt  3_library_fileformats.txt  3_library_filesys.txt  3_library_fnmatch.txt  3_library_fractions.txt  3_library_functional.txt  3_library_functions.txt  3_library_functools.txt  3_library_glob.txt  3_library_graphlib.txt  3_library_gzip.txt  3_library_hashlib.txt  (+52 more)
scripts/: acquire_github.py  add_gpl_headers.py  automate_qthread_migration.py  check_gpu.py  check_ssrf_debug.py  migrate_all_tabs.py  migrate_persistence_data.py  notify_team.py
src/: __init__.py  code_standards_config.json  main.py  run_ui_tests.py
test_reports/: automate_mode_integration_report.txt  automate_mode_integration_results.json  autonomous_simulation_report.txt  autonomous_simulation_results.json
tests/: test_ai_tools.py  test_cloud_models.py  test_comprehensive.py  test_continuous_learning.py  test_intelligent_analyzer.py  test_refactoring.py  test_scanner.py  test_web_scraping.py
(+398 files in other folders)
